[package]
name = "weblok-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weblok-codegen = { path = "../weblok-codegen" }
weblok-common = { path = "../weblok-common" }
# bevy = { version = "0.7", feature = ["dynamic"] }
async-trait = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }
ws_stream_wasm = { version = "0.7" }
wasm-bindgen-futures = { version = "0.3", features = ["futures_0_3"] }
pharos = { version = "0.5" }
futures = { version = "0.3" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.19", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
