[package]
name = "weblok-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.17"
tokio = { version = "1.19", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
weblok-common = { path = "../weblok-common" }
